kubernetes/apps/home-automation/zigbee2mqtt/patches/httproute-add-homepage-annotations.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Zigbee2MQTT"
    gethomepage.dev/description: "Zigbee bridge frontend"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "zigbee2mqtt.png"
